# AUTO-INSURANCE

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  FINDINGS.md  GEMINI.md  MASTER.md  OPERATOR.md  README.md  RUNBOOK.md  checklist_v3.md  checklist_v5.md  plan_v3.md  plan_v5.md  roster.yaml  setup.sh  smoke.sh  task_prompt.template.txt
do_not_read/: OPERATOR_WORKFLOW.md  TODO.md  atypical_runs_report.txt  benchmark_pivots.xlsx  dualbar_per_cell_ALL.txt  factor_per_cell_ALL.txt  factor_scorecard.xlsx  factor_scorecard_ALL.txt  kb_consistency_summary.txt  per_cell_table.xlsx  per_cell_table_ALL.txt  per_dataset_table.xlsx  per_dataset_table_ALL.txt  per_model_table.xlsx  per_model_table_ALL.txt  plan_v1.md  plan_v2.md  plan_v4.md  run_atypicality_ranking.xlsx  table_0508.xlsx  table_0522.xlsx
evaluator/: .dockerignore  .gitignore  AGENT.md  Dockerfile  README.md  app.R
evaluator/datasets/: ausprivauto.yaml  auto_insurance.yaml  bemtpl97.yaml  fremtpl2.yaml  sgautonb.yaml  swautoins.yaml
knowledge-base/: .gitignore  WIKI_VERSION.txt  pyproject.toml  requirements.txt
knowledge-base/knowledge/wiki/: CLAUDE.md  gaps.md  index.md  overview.md
knowledge-base/knowledge/wiki/concepts/: GeneralizedAdditiveModels.md  GeneralizedLinearModels.md  GroupedElasticNet.md  TweedieDistribution.md
knowledge-base/knowledge/wiki/examples/: qian-2016-hdtweedie.R  smyth-jorgensen-2002-tweedie-dispersion.R
operator/: auto-resume-sequential.py  auto-resume.py  collect-results.py  eval-api-watchdog.sh  mech-audit.py
